Work on publication tracking and update notebooks.

--- a/RM/3_1_0/notebooks/Attestation Examples.ipynb
+++ b/RM/3_1_0/notebooks/Attestation Examples.ipynb
@@ -61,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "#help(AttestationType)"
+    "help(AttestationType)"
    ]
   },
   {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -92,27 +92,31 @@
     "v = XdFileType('Test Attestation View')\n",
     "v.docs = \"An example view\"\n",
     "v.definition_url = \"http://s3model.com/examples/view\"\n",
+    "v.published = True\n",
     "att.view = v\n",
     "\n",
     "p = XdFileType('Test Attestation Proof')\n",
     "p.docs = \"An example proof\"\n",
     "p.definition_url = \"http://s3model.com/examples/proof\"\n",
+    "p.published = True\n",
     "att.proof = p\n",
     "\n",
     "r = XdFileType('Test Attestation Reason')\n",
     "r.docs = \"An example reason\"\n",
     "r.definition_url = \"http://s3model.com/examples/reason\"\n",
+    "r.published = True\n",
     "att.reason = r\n",
     "\n",
     "c = PartyType(\"Test Attestation Committer\")\n",
     "c.docs = \"An example committer\"\n",
     "c.definition_url = \"http://s3model.com/examples/committer\"\n",
+    "c.published = True\n",
     "att.committer = c\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -121,14 +125,13 @@
      "text": [
       "\n",
       "\n",
-      "  <xs:complexType name='mc-cjnhjn1zi0000et8p8caal2y5' xml:lang=''>\n",
+      "  <xs:complexType name='mc-cjnmslvs30000ky8psjbvn671' xml:lang=''>\n",
       "    <xs:annotation>\n",
       "    <xs:documentation>\n",
       "      An example Attestation component.\n",
-      "        Definition: http%3A//s3model.com/examples/attestation\n",
       "    </xs:documentation>\n",
       "    <xs:appinfo>\n",
-      "    <rdfs:Class rdf:about='mc-cjnhjn1zi0000et8p8caal2y5'>\n",
+      "    <rdfs:Class rdf:about='mc-cjnmslvs30000ky8psjbvn671'>\n",
       "    <rdfs:subClassOf rdf:resource='https://www.s3model.com/ns/s3m/s3model_3_1_0.xsd#AttestationType'/>\n",
       "    <rdfs:subClassOf rdf:resource='https://www.s3model.com/ns/s3m/s3model/RMC'/>\n",
       "    <rdfs:label>Test Attestation</rdfs:label>\n",
@@ -139,10 +142,10 @@
       "      <xs:restriction base='s3m:AttestationType'>\n",
       "        <xs:sequence>\n",
       "          <xs:element maxOccurs='1' minOccurs='1' name='label' type='xs:string' fixed=\"Test Attestation\"/>\n",
-      "          <xs:element maxOccurs='1' minOccurs='0' name='view' type='s3m:mc-cjnhjn1zj0001et8p67bqy6cc'/> \n",
-      "          <xs:element maxOccurs='1' minOccurs='0' name='proof' type='s3m:mc-cjnhjn1zk0003et8pjbjore9m'/> \n",
-      "          <xs:element maxOccurs='1' minOccurs='0' name='reason' type='s3m:mc-cjnhjn1zl0005et8plbfon82t'/> \n",
-      "          <xs:element maxOccurs='1' minOccurs='0' name='committer' type='s3m:mc-cjnhjn1zm0007et8pgue3geau'/>\n",
+      "          <xs:element maxOccurs='1' minOccurs='0' name='view' type='s3m:mc-cjnmslvs40001ky8p673kxfym'/> \n",
+      "          <xs:element maxOccurs='1' minOccurs='0' name='proof' type='s3m:mc-cjnmslvs40003ky8pveakiyu6'/> \n",
+      "          <xs:element maxOccurs='1' minOccurs='0' name='reason' type='s3m:mc-cjnmslvs40005ky8p32g0zo8i'/> \n",
+      "          <xs:element maxOccurs='1' minOccurs='0' name='committer' type='s3m:mc-cjnmslvs40007ky8p2ka2dc58'/>\n",
       "          <xs:element maxOccurs='1' minOccurs='0' name='committed' type='xs:dateTime'/>\n",
       "          <xs:element maxOccurs='1' minOccurs='1' default='true' name='pending' type='xs:boolean'/>\n",
       "          </xs:sequence>\n",
@@ -150,14 +153,14 @@
       "      </xs:complexContent>\n",
       "    </xs:complexType>\n",
       "\n",
-      "  <xs:element name=\"ms-cjnhjn1zj0001et8p67bqy6cc\" type=\"s3m:mc-cjnhjn1zj0001et8p67bqy6cc\"/>\n",
-      "  <xs:complexType name=\"mc-cjnhjn1zj0001et8p67bqy6cc\">\n",
+      "  <xs:element name=\"ms-cjnmslvs40001ky8p673kxfym\" type=\"s3m:mc-cjnmslvs40001ky8p673kxfym\"/>\n",
+      "  <xs:complexType name=\"mc-cjnmslvs40001ky8p673kxfym\">\n",
       "    <xs:annotation>\n",
       "      <xs:documentation>\n",
       "        An example view\n",
       "      </xs:documentation>\n",
       "      <xs:appinfo>\n",
-      "        <rdfs:Class rdf:about=\"mc-cjnhjn1zj0001et8p67bqy6cc\">\n",
+      "        <rdfs:Class rdf:about=\"mc-cjnmslvs40001ky8p673kxfym\">\n",
       "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model_3_1_0.xsd#XdFileType\"/>\n",
       "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model/RMC\"/>\n",
       "          <rdfs:isDefinedBy rdf:resource=\"http%3A//s3model.com/examples/view\"/>\n",
@@ -191,14 +194,14 @@
       "    </xs:complexContent>\n",
       "  </xs:complexType>\n",
       "\n",
-      "  <xs:element name=\"ms-cjnhjn1zk0003et8pjbjore9m\" type=\"s3m:mc-cjnhjn1zk0003et8pjbjore9m\"/>\n",
-      "  <xs:complexType name=\"mc-cjnhjn1zk0003et8pjbjore9m\">\n",
+      "  <xs:element name=\"ms-cjnmslvs40003ky8pveakiyu6\" type=\"s3m:mc-cjnmslvs40003ky8pveakiyu6\"/>\n",
+      "  <xs:complexType name=\"mc-cjnmslvs40003ky8pveakiyu6\">\n",
       "    <xs:annotation>\n",
       "      <xs:documentation>\n",
       "        An example proof\n",
       "      </xs:documentation>\n",
       "      <xs:appinfo>\n",
-      "        <rdfs:Class rdf:about=\"mc-cjnhjn1zk0003et8pjbjore9m\">\n",
+      "        <rdfs:Class rdf:about=\"mc-cjnmslvs40003ky8pveakiyu6\">\n",
       "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model_3_1_0.xsd#XdFileType\"/>\n",
       "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model/RMC\"/>\n",
       "          <rdfs:isDefinedBy rdf:resource=\"http%3A//s3model.com/examples/proof\"/>\n",
@@ -232,14 +235,14 @@
       "    </xs:complexContent>\n",
       "  </xs:complexType>\n",
       "\n",
-      "  <xs:element name=\"ms-cjnhjn1zl0005et8plbfon82t\" type=\"s3m:mc-cjnhjn1zl0005et8plbfon82t\"/>\n",
-      "  <xs:complexType name=\"mc-cjnhjn1zl0005et8plbfon82t\">\n",
+      "  <xs:element name=\"ms-cjnmslvs40005ky8p32g0zo8i\" type=\"s3m:mc-cjnmslvs40005ky8p32g0zo8i\"/>\n",
+      "  <xs:complexType name=\"mc-cjnmslvs40005ky8p32g0zo8i\">\n",
       "    <xs:annotation>\n",
       "      <xs:documentation>\n",
       "        An example reason\n",
       "      </xs:documentation>\n",
       "      <xs:appinfo>\n",
-      "        <rdfs:Class rdf:about=\"mc-cjnhjn1zl0005et8plbfon82t\">\n",
+      "        <rdfs:Class rdf:about=\"mc-cjnmslvs40005ky8p32g0zo8i\">\n",
       "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model_3_1_0.xsd#XdFileType\"/>\n",
       "          <rdfs:subClassOf rdf:resource=\"https://www.s3model.com/ns/s3m/s3model/RMC\"/>\n",
       "          <rdfs:isDefinedBy rdf:resource=\"http%3A//s3model.com/examples/reason\"/>\n",
@@ -275,14 +278,13 @@
       "\n",
       "\n",
       "\n",
-      "  <xs:complexType name='mc-cjnhjn1zm0007et8pgue3geau'> \n",
+      "  <xs:complexType name='mc-cjnmslvs40007ky8p2ka2dc58'> \n",
       "    <xs:annotation>\n",
       "    <xs:documentation>\n",
       "      An example committer\n",
-      "        Definition: http%3A//s3model.com/examples/committer\n",
       "    </xs:documentation>\n",
       "    <xs:appinfo>\n",
-      "    <rdfs:Class rdf:about='mc-cjnhjn1zm0007et8pgue3geau'>\n",
+      "    <rdfs:Class rdf:about='mc-cjnmslvs40007ky8p2ka2dc58'>\n",
       "    <rdfs:subClassOf rdf:resource='https://www.s3model.com/ns/s3m/s3model_3_1_0.xsd#PartyType'/>\n",
       "    <rdfs:subClassOf rdf:resource='https://www.s3model.com/ns/s3m/s3model/RMC'/>\n",
       "    <rdfs:label>Test Attestation Committer</rdfs:label>\n",
@@ -305,6 +307,7 @@
    ],
    "source": [
     "# view the model\n",
+    "att.published = True\n",
     "print(att.getModel())"
    ]
   },
@@ -317,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
