--- a/RM/3_1_0/notebooks/ClusterType Examples.ipynb
+++ b/RM/3_1_0/notebooks/ClusterType Examples.ipynb
@@ -102,10 +102,12 @@
     "choice.append(('Add New','https://datainsights.tech/examples/AddNewRecord'))\n",
     "choice.append(('Modify','https://datainsights.tech/examples/ModifyRecord'))\n",
     "choice.append(('Delete','https://datainsights.tech/examples/DeleteRecord'))\n",
+    "\n",
     "action = XdStringType(\"Record Action\")\n",
     "action.docs = \"Select the action to perform.\"\n",
     "action.definition_url = 'http://s3model.com/examples/action_choice'\n",
     "action.enums = choice\n",
+    "action.published = True\n",
     "print(action)"
    ]
   },
@@ -127,7 +129,8 @@
     "empnum = XdStringType('Employee Number')\n",
     "empnum.docs = 'An employee number consists of a single character department code (A-E) and 5 digits (0-9).'\n",
     "empnum.definition_url = 'https://datainsights.tech/examples/EmployeeNumber'\n",
-    "empnum.regex = '[A-E]{1}[0-9]{5}'"
+    "empnum.regex = '[A-E]{1}[0-9]{5}'\n",
+    "empnum.published = True"
    ]
   },
   {
@@ -148,6 +151,7 @@
     "joined.cardinality = ('year_month', [0,0])\n",
     "joined.cardinality = ('month_day', [0,0])\n",
     "joined.cardinality = ('duration', [0,0])\n",
+    "joined.published = True\n",
     "print(joined)"
    ]
   },
@@ -161,6 +165,7 @@
     "fname.docs = \"The employee's first name.\"\n",
     "fname.definition_url = 'https://datainsights.tech/examples/EmployeeFirstName'\n",
     "fname.cardinality = ('value', [1,1])\n",
+    "fname.published = True\n",
     "print(fname)"
    ]
   },
@@ -174,6 +179,7 @@
     "lname.docs = \"The employee's last name.\"\n",
     "lname.definition_url = 'https://datainsights.tech/examples/EmployeeLastName'\n",
     "lname.cardinality = ('value', [1,1])\n",
+    "lname.published = True\n",
     "print(lname)"
    ]
   },
@@ -191,6 +197,7 @@
     "jobs.append(('Foreman', 'https://datainsights.tech/examples/EmployeeDesignation#Forman'))\n",
     "jobs.append(('LineWorker', 'https://datainsights.tech/examples/EmployeeDesignation#LineWorker'))\n",
     "desig.enums = jobs\n",
+    "desig.published = True\n",
     "print(desig)"
    ]
   },
@@ -212,6 +219,7 @@
     "dob.cardinality = ('year_month', [0,1])\n",
     "dob.cardinality = ('month_day', [0,0])\n",
     "dob.cardinality = ('duration', [0,0])\n",
+    "dob.published = True\n",
     "print(dob)"
    ]
   },
@@ -229,6 +237,7 @@
     "level.append(('Level2', 'https://datainsights.tech/examples/EmployeeQualification#Level2'))\n",
     "level.append(('Level3', 'https://datainsights.tech/examples/EmployeeQualification#Level3'))\n",
     "qual.enums = level\n",
+    "qual.published = True\n",
     "print(qual)"
    ]
   },
@@ -242,7 +251,7 @@
     "unit = XdStringType('Years')\n",
     "unit.docs = \"Count of the years of experience.\"\n",
     "unit.definition_url = 'https://datainsights.tech/examples/Experience'\n",
-    "\n",
+    "unit.published = True\n",
     "# now the count model\n",
     "exp = XdCountType(\"Years of Experience\")\n",
     "exp.docs = \"Record the number of years of experience of the employee.\"\n",
@@ -250,6 +259,7 @@
     "exp.min_inclusive = 0\n",
     "exp.max_inclusive = 99\n",
     "exp.units = unit\n",
+    "exp.published = True\n",
     "print(exp)"
    ]
   },
@@ -262,40 +272,39 @@
     "# Each component needs to be placed inside a new adapter before being added to the Cluster\n",
     "a = XdAdapterType()\n",
     "a.value = action # form action\n",
-    "# add the adapter to the cluster\n",
     "ERF.items = a\n",
     "\n",
-    "a = XdAdapterType()\n",
-    "a.value = empnum # Employee Number\n",
-    "ERF.items = a\n",
+    "b = XdAdapterType()\n",
+    "b.value = empnum # Employee Number\n",
+    "ERF.items = b\n",
     "\n",
-    "a = XdAdapterType()\n",
-    "a.value = joined  \n",
-    "ERF.items = a\n",
+    "c = XdAdapterType()\n",
+    "c.value = joined  \n",
+    "ERF.items = c\n",
     "\n",
-    "a = XdAdapterType()\n",
-    "a.value = fname \n",
-    "ERF.items = a\n",
+    "d = XdAdapterType()\n",
+    "d.value = fname \n",
+    "ERF.items = d\n",
     "\n",
-    "a = XdAdapterType()\n",
-    "a.value = lname\n",
-    "ERF.items = a\n",
+    "e = XdAdapterType()\n",
+    "e.value = lname\n",
+    "ERF.items = e\n",
     "\n",
-    "a = XdAdapterType()\n",
-    "a.value = desig\n",
-    "ERF.items = a\n",
+    "f = XdAdapterType()\n",
+    "f.value = desig\n",
+    "ERF.items = f\n",
     "\n",
-    "a = XdAdapterType()\n",
-    "a.value = dob\n",
-    "ERF.items = a\n",
+    "g = XdAdapterType()\n",
+    "g.value = dob\n",
+    "ERF.items = g\n",
     "\n",
-    "a = XdAdapterType()\n",
-    "a.value = qual\n",
-    "ERF.items = a\n",
+    "h = XdAdapterType()\n",
+    "h.value = qual\n",
+    "ERF.items = h\n",
     "\n",
-    "a = XdAdapterType()\n",
-    "a.value = exp\n",
-    "ERF.items = a\n",
+    "i = XdAdapterType()\n",
+    "i.value = exp\n",
+    "ERF.items = i\n",
     "\n",
     "print(ERF)"
    ]
@@ -308,6 +317,7 @@
    },
    "outputs": [],
    "source": [
+    "ERF.published = True\n",
     "print(ERF.getModel())"
    ]
   }
