--- a/RM/3_1_0/notebooks/XdCount Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdCount Examples.ipynb
@@ -70,7 +70,11 @@
     }
    },
    "source": [
-    "Create a XdCount instance. We must provide a *label* as per all Xd Types. We also need a units object which is a XdStringType. Usually the modeler will provide a selection of options for the end-user to choose from when selecting a units value. With XdCountTypes though there is often only one type of unit allowed. In our contrived model here we will count widgets and they can be recorded in individuals, dozens or cases. This is so you can see the flexibility in modeling. The word *cases* will only make sense if you provide context; how many widgets are in a case?"
+    "Create a XdCount model instance. We must provide a *label* as per all Xd Types. \n",
+    "\n",
+    "We also need a units object which is a XdStringType. Usually the modeler will provide a selection of options, as enumerations, for the end-user to choose from when selecting a units value. With XdCountTypes though there is often only one type of unit allowed. \n",
+    "\n",
+    "In our contrived model here we will count widgets and they can be recorded in individuals, dozens or cases. This is so you can see the flexibility in modeling. The word *cases* will only make sense if you provide context; how many widgets are in a case?"
    ]
   },
   {
@@ -89,6 +93,8 @@
     "enums.append(('dozens', 'https://s3model.com/widget/units#dozens'))\n",
     "enums.append(('cases', 'https://s3model.com/widget/units#cases'))\n",
     "u.enums = enums\n",
+    "# publish the units model\n",
+    "u.published = True\n",
     "\n",
     "# now the count model\n",
     "d = XdCountType(\"Widgets Count\")\n",
@@ -106,6 +112,7 @@
    },
    "outputs": [],
    "source": [
+    "d.published = True\n",
     "print(d.getModel())"
    ]
   },
@@ -124,8 +131,9 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "print(d.asXML())"
+    "# add instnace data\n",
+    "d.value = 25\n",
+    "print(d.getXMLInstance())"
    ]
   },
   {
@@ -151,6 +159,7 @@
     "u.definition_url = 'https://s3model.com/things/units'\n",
     "# create the units options\n",
     "u.default = 'Units Example'\n",
+    "u.published = True\n",
     "\n",
     "# now the count model\n",
     "d = XdCountType(\"Example Count\")\n",
@@ -170,6 +179,7 @@
    },
    "outputs": [],
    "source": [
+    "d.published = True\n",
     "print(d.getModel())"
    ]
   },
@@ -209,8 +219,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d.xdcount_value = 90\n",
-    "print(d.asXML())"
+    "d.value = 90\n",
+    "print(d.getXMLInstance())"
    ]
   }
  ],
