--- a/RM/3_1_0/notebooks/XdFloat Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdFloat Examples.ipynb
@@ -70,7 +70,9 @@
     }
    },
    "source": [
-    "Create a XdFloat instance. We must provide a *label* as per all Xd Types. A units object, which is a XdStringType, is optional. \n"
+    "Create a XdFloat model instance. We must provide a *label* as per all Xd Types. \n",
+    "\n",
+    "A units object, which is a XdStringType, is optional. "
    ]
   },
   {
@@ -96,6 +98,7 @@
    },
    "outputs": [],
    "source": [
+    "d.published = True\n",
     "print(d.getModel())"
    ]
   },
@@ -107,8 +110,8 @@
    },
    "outputs": [],
    "source": [
-    "d.xdfloat_value = 2.45E2\n",
-    "print(d.asXML())"
+    "d.xdfloat_value = 2.45E6\n",
+    "print(d.getXMLInstance())"
    ]
   }
  ],
