--- a/RM/3_1_0/notebooks/XdOrdinal Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdOrdinal Examples.ipynb
@@ -70,7 +70,9 @@
     }
    },
    "source": [
-    "Create a XdOrdinal instance. We must provide a *label* and the *ordinals, symbols and definition url* at creation time. Each entry is a tuple. The tuples are appended to a list. The list is ordered so the sequence that you append the entries is the sequence that they will appear in the model.  This may or may not be significant to the eventual user interface. "
+    "Create a XdOrdinal model instance. We must provide a *label* and the *choices* (for the *ordinals & symbols*) at creation time. Each choice entry is a tuple. The tuples are appended to a list. \n",
+    "\n",
+    "The list is ordered so the sequence that you append the entries is the sequence that they will appear in the model.  This may or may not be significant to the eventual user interface. "
    ]
   },
   {
@@ -83,9 +85,11 @@
     "c.append((0,'lo','https://datainsights.tech/examples/lo'))\n",
     "c.append((1,'mid','https://datainsights.tech/examples/mid'))\n",
     "c.append((2,'hi','https://datainsights.tech/examples/hi'))\n",
+    "\n",
     "d = XdOrdinalType(\"Severity Level\", c)\n",
     "d.docs = \"Select a severity level.\"\n",
     "d.definition_url = 'http://s3model.com/examples/'\n",
+    "\n",
     "print(d)"
    ]
   },
@@ -97,6 +101,7 @@
    },
    "outputs": [],
    "source": [
+    "d.published = True\n",
     "print(d.getModel())"
    ]
   },
@@ -107,7 +112,7 @@
    "outputs": [],
    "source": [
     "d.normal_status = 'mid'\n",
-    "print(d.asXML())"
+    "print(d.getXMLInstance())"
    ]
   }
  ],
