--- a/RM/3_1_0/notebooks/XdRatio Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdRatio Examples.ipynb
@@ -116,19 +116,23 @@
     "ratio.docs = \"Model a ratio with wins in the numerator and losses in the denominator.\"\n",
     "ratio.ratio_type = 'ratio'\n",
     "ratio.definition_url = 'http://en.wikipedia.org/wiki/Odds'\n",
+    "\n",
     "# Define the units\n",
     "nu = XdStringType('Wins')\n",
     "nu.definition_url = 'http://www.merriam-webster.com/dictionary/win/2a'\n",
     "nu.enums = [('Wins', 'http://www.merriam-webster.com/dictionary/win/2a')]\n",
     "nu.docs = 'Numerator units for Wins vs. Losses'\n",
+    "nu.published = True\n",
+    "\n",
     "du = XdStringType('Losses')\n",
     "du.definition_url = 'http://www.merriam-webster.com/dictionary/loss/4a'\n",
     "du.enums = [('Losses', 'http://www.merriam-webster.com/dictionary/loss/4a')]\n",
     "du.docs = 'Denominator units for Wins vs. Losses'\n",
+    "du.published = True\n",
     "\n",
     "ratio.numerator_units = nu\n",
     "ratio.denominator_units = du\n",
-    "\n",
+    "ratio.published = True\n",
     "print(ratio)"
    ]
   },
@@ -178,18 +182,23 @@
     "rate.docs = \"Model a rate for the number of items puchased per visit.\"\n",
     "rate.ratio_type = 'rate'\n",
     "rate.definition_url = 'https://s3model.com/examples/ippv'\n",
+    "\n",
     "# Define the units\n",
     "nu = XdStringType('Number of items purchased')\n",
     "nu.definition_url = 'https://s3model.com/examples/nip'\n",
     "nu.enums = [('Number of items', 'https://s3model.com/examples/nip')]\n",
     "nu.docs = 'Numerator units for Items purchased per visit.'\n",
+    "nu.published = True\n",
+    "\n",
     "du = XdStringType('Number of visits')\n",
     "du.definition_url = 'https://s3model.com/examples/niv'\n",
     "du.enums = [('Numbr of visits', 'https://s3model.com/examples/niv')]\n",
     "du.docs = 'Denominator units for Items purchased per visit.'\n",
+    "du.published = True\n",
     "\n",
     "rate.numerator_units = nu\n",
     "rate.denominator_units = du\n",
+    "rate.published = True\n",
     "print(rate)"
    ]
   },
@@ -238,18 +247,23 @@
     "prop.docs = \"Model a proportion of registered voters that actually voted.\"\n",
     "prop.ratio_type = 'proportion'\n",
     "prop.definition_url = 'https://www.fairvote.org/voter_turnout#voter_turnout_101'\n",
+    "\n",
     "# Define the units\n",
     "nu = XdStringType('Number of registered voters that voted')\n",
     "nu.definition_url = 'https://en.wikipedia.org/wiki/Voter_registration#voted'\n",
     "nu.enums = [('Voted', 'https://en.wikipedia.org/wiki/Voter_registration#voted')]\n",
     "nu.docs = 'Numerator units for Voter turnout.'\n",
+    "nu.published = True\n",
+    "\n",
     "du = XdStringType('Number of registered voters')\n",
     "du.definition_url = 'https://en.wikipedia.org/wiki/Voter_registration#registered'\n",
     "du.enums = [('Registered', 'https://en.wikipedia.org/wiki/Voter_registration#registered')]\n",
     "du.docs = 'Denominator units for Voter turnout.'\n",
+    "du.published = True\n",
     "\n",
     "prop.numerator_units = nu\n",
     "prop.denominator_units = du\n",
+    "prop.published = True\n",
     "print(prop)"
    ]
   },
