--- a/RM/3_1_0/notebooks/XdQuantity Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdQuantity Examples.ipynb
@@ -70,7 +70,9 @@
     }
    },
    "source": [
-    "Create a XdQuantity instance. We must provide a *label* as per all Xd Types. We also need a units object which is a XdStringType. Usually the modeler will provide a selection of options for the end-user to choose from when selecting a units value. \n",
+    "Create a XdQuantity model instance. We must provide a *label* as per all Xd Types. \n",
+    "\n",
+    "We also need a units object which is a XdStringType. Usually the modeler will provide a selection of options for the end-user to choose from when selecting a units value. \n",
     "\n",
     "For this example we will create a model to record an amount of currency. In a real-world application the complete list of codes would usually be used. https://www.currency-iso.org/en/home/tables/table-a1.html In our example we show a few."
    ]
@@ -91,6 +93,7 @@
     "enums.append(('BRL', 'https://www.iso.org/iso-4217-currency-codes.html#BRL'))\n",
     "enums.append(('CAD', 'https://www.iso.org/iso-4217-currency-codes.html#CAD'))\n",
     "u.enums = enums\n",
+    "u.published = True\n",
     "\n",
     "# now the model\n",
     "d = XdQuantityType(\"Currency Amount\")\n",
@@ -117,6 +120,7 @@
    },
    "outputs": [],
    "source": [
+    "d.published = True\n",
     "print(d.getModel())"
    ]
   },
@@ -135,8 +139,8 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "print(d.asXML())"
+    "d.value = 128.00\n",
+    "print(d.getXMLInstance())"
    ]
   }
  ],
