--- a/RM/3_1_0/notebooks/XdTemporal Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdTemporal Examples.ipynb
@@ -93,6 +93,7 @@
     "d.cardinality = ('duration', [0,0])\n",
     "print(d)\n",
     "print('\\n\\n')\n",
+    "d.published = True\n",
     "print(d.getModel())"
    ]
   },
@@ -127,6 +128,7 @@
     "d.cardinality = ('duration', [0,0])\n",
     "print(d)\n",
     "print('\\n\\n')\n",
+    "d.published = True\n",
     "print(d.getModel())"
    ]
   }
