Add PublicationError. Move utils into a separate file.

--- a/RM/3_1_0/notebooks/XdBoolean Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdBoolean Examples.ipynb
@@ -264,7 +264,9 @@
     }
    },
    "source": [
-    "View an example XML fragment. The model defines what is required and here we include several elements that are optional. Review the documentation again for details."
+    "View an example XML fragment. Instead of providing specific instance data we can tell the generator **(example=True)** that we want an example XML fragment containing sample data. \n",
+    "\n",
+    "The model above defines what is required. Review the documentation again for details."
    ]
   },
   {
@@ -278,7 +280,8 @@
    },
    "outputs": [],
    "source": [
-    "print(d.getXMLExample())"
+    "ex = True\n",
+    "print(d.getXMLInstance(ex))"
    ]
   },
   {
@@ -303,7 +306,7 @@
    },
    "outputs": [],
    "source": [
-    "print(d.getJSONExample())"
+    "print(d.getJSONInstance())"
    ]
   },
   {
@@ -315,7 +318,7 @@
    },
    "source": [
     "# Temporal and Spatial Semantics\n",
-    "We have previously focused on the semnatics around the meaning of the information being modeled and the data captured. \n",
+    "We have previously focused on the semantics around the meaning of the information being modeled and the data captured. \n",
     "\n",
     "Just as important is the ability to exchange the significant time elements as well as the spatial or location elements. \n",
     "\n",
@@ -334,42 +337,9 @@
    "source": [
     "Note in the data instances the *act, vtb, vte, tr, modified, latitude and longitude* elements. \n",
     "\n",
-    "These are default optional. The requirements for these is set using the cardinality dictionary. Our examples here did not take that into account for simplicity sake. That is why we used the asXMLex and asJSONex calls here. The other XdTypes do not have those methods. The getXMLInstance() and getJSONInstance() methods are the valid methods in all XdTypes. \n",
+    "These are default optional. The requirements for these is set using the cardinality dictionary. Our examples here did not take that into account for simplicity sake. \n",
     "\n",
-    "The *Exceptional Values* are inserted during the validation process in your implementation. They are shown here just as a full example. The advanced course covers how to implement this process."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Seen here is the minimalist XML with only the required *label* and XdBoolean true or false value."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "print(d.getXMLInstance())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(d.getJSONInstance())"
+    "The *Exceptional Values* (*ev* element) is inserted during the validation process in your implementation when needed. They are not shown here. The advanced course covers how to implement this process."
    ]
   }
  ],
