--- a/RM/3_1_0/notebooks/XdLink Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdLink Examples.ipynb
@@ -34,7 +34,8 @@
    "source": [
     "import sys \n",
     "sys.path.append(\"../pylib/\")\n",
-    "from s3m_xdt import XdLinkType"
+    "from s3m_xdt import XdLinkType\n",
+    "from s3m_utils import random_dtstr"
    ]
   },
   {
@@ -283,7 +284,7 @@
    },
    "outputs": [],
    "source": [
-    "print(d.getXMLInstance())"
+    "print(d.getXMLInstance(False))"
    ]
   },
   {
@@ -410,8 +411,10 @@
    },
    "outputs": [],
    "source": [
-    "# set the IP Address\n",
+    "# set the required data\n",
     "d.link = '192.1.0.24'\n",
+    "d.vtb = random_dtstr() # a function to return a random datetime string\n",
+    "d.vte = random_dtstr()\n",
     "print(d.getXMLInstance())"
    ]
   },
@@ -504,7 +507,19 @@
     "# set location data\n",
     "d.latitude = '-18.644500'\n",
     "d.longitude = '-50.523309'\n",
+    "d.vtb = random_dtstr()\n",
+    "d.vte = random_dtstr()\n",
     "print(d.getXMLInstance())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a JSON instance\n",
+    "print(d.getJSONInstance())"
    ]
   }
  ],
