--- a/RM/3_1_0/notebooks/XdString Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdString Examples.ipynb
@@ -377,7 +377,7 @@
    },
    "outputs": [],
    "source": [
-    "# Create a new instance.\n",
+    "# Create a new model instance.\n",
     "d = XdStringType('Selected Color')\n",
     "d.docs = \"This is the color chosen by the customer.\"\n",
     "d.definition_url = 'https://s3model.com/items/colors'\n",
