--- a/RM/3_1_0/notebooks/DMType Examples.ipynb
+++ b/RM/3_1_0/notebooks/DMType Examples.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -88,12 +88,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "ERF = ClusterType('Employee Record Form')\n",
     "ERF.definition_url = 'http://s3model.com/examples/ERF'\n",
+    "\n",
     "choice = []\n",
     "choice.append(('Add New','https://datainsights.tech/examples/AddNewRecord'))\n",
     "choice.append(('Modify','https://datainsights.tech/examples/ModifyRecord'))\n",
@@ -102,10 +103,14 @@
     "action.docs = \"Select the action to perform.\"\n",
     "action.definition_url = 'http://s3model.com/examples/action_choice'\n",
     "action.enums = choice\n",
+    "action.published = True\n",
+    "\n",
     "empnum = XdStringType('Employee Number')\n",
     "empnum.docs = 'An employee number consists of a single character department code (A-E) and 5 digits (0-9).'\n",
     "empnum.definition_url = 'https://datainsights.tech/examples/EmployeeNumber'\n",
     "empnum.regex = '[A-E]{1}[0-9]{5}'\n",
+    "empnum.published = True\n",
+    "\n",
     "joined = XdTemporalType(\"Date of Joining\")\n",
     "joined.docs = \"Require a full date. Disallow all others.\"\n",
     "joined.definition_url = 'http://s3model.com/examples/joindate'\n",
@@ -118,14 +123,20 @@
     "joined.cardinality = ('year_month', [0,0])\n",
     "joined.cardinality = ('month_day', [0,0])\n",
     "joined.cardinality = ('duration', [0,0])\n",
+    "joined.published = True\n",
+    "\n",
     "fname = XdStringType('First Name')\n",
     "fname.docs = \"The employee's first name.\"\n",
     "fname.definition_url = 'https://datainsights.tech/examples/EmployeeFirstName'\n",
     "fname.cardinality = ('value', [1,1])\n",
+    "fname.published = True\n",
+    "\n",
     "lname = XdStringType('Last Name')\n",
     "lname.docs = \"The employee's last name.\"\n",
     "lname.definition_url = 'https://datainsights.tech/examples/EmployeeLastName'\n",
     "lname.cardinality = ('value', [1,1])\n",
+    "lname.published = True\n",
+    "\n",
     "desig = XdStringType('Designation')\n",
     "desig.docs = \"The employee's designation.\"\n",
     "desig.definition_url = 'https://datainsights.tech/examples/EmployeeDesignation'\n",
@@ -134,6 +145,8 @@
     "jobs.append(('Foreman', 'https://datainsights.tech/examples/EmployeeDesignation#Forman'))\n",
     "jobs.append(('LineWorker', 'https://datainsights.tech/examples/EmployeeDesignation#LineWorker'))\n",
     "desig.enums = jobs\n",
+    "desig.published = True\n",
+    "\n",
     "dob = XdTemporalType(\"Date of Birth\")\n",
     "dob.docs = \"DOB allows a full date or just a month/year.\"\n",
     "dob.definition_url = 'http://s3model.com/examples/dob'\n",
@@ -146,6 +159,8 @@
     "dob.cardinality = ('year_month', [0,1])\n",
     "dob.cardinality = ('month_day', [0,0])\n",
     "dob.cardinality = ('duration', [0,0])\n",
+    "dob.published = True\n",
+    "\n",
     "qual = XdStringType('Highest Qualification')\n",
     "qual.docs = \"The employee's highest level of qualification.\"\n",
     "qual.definition_url = 'https://datainsights.tech/examples/EmployeeQualification'\n",
@@ -154,15 +169,22 @@
     "level.append(('Level2', 'https://datainsights.tech/examples/EmployeeQualification#Level2'))\n",
     "level.append(('Level3', 'https://datainsights.tech/examples/EmployeeQualification#Level3'))\n",
     "qual.enums = level\n",
+    "qual.published = True\n",
+    "\n",
     "unit = XdStringType('Years')\n",
     "unit.docs = \"Count of the years of experience.\"\n",
     "unit.definition_url = 'https://datainsights.tech/examples/Experience'\n",
+    "unit.published = True\n",
+    "\n",
     "exp = XdCountType(\"Years of Experience\")\n",
     "exp.docs = \"Record the number of years of experience of the employee.\"\n",
     "exp.definition_url = 'https://datainsights.tech/examples/Experience#Years'\n",
     "exp.min_inclusive = 0\n",
     "exp.max_inclusive = 99\n",
     "exp.units = unit\n",
+    "exp.published = True\n",
+    "\n",
+    "# add items to the Cluster\n",
     "a = XdAdapterType()\n",
     "a.value = action \n",
     "ERF.items = a\n",
@@ -189,12 +211,13 @@
     "ERF.items = a\n",
     "a = XdAdapterType()\n",
     "a.value = exp\n",
-    "ERF.items = a"
+    "ERF.items = a\n",
+    "ERF.published = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,9 +269,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "creator  -  Unknown\n",
+      "contribs  -  ['Someone', 'Noone']\n",
+      "subject  -  S3M Data Model Example\n",
+      "rights  -  Creative Commons\n",
+      "relation  -  None\n",
+      "coverage  -  Global\n",
+      "description  -  Needs a description\n",
+      "publisher  -  Data Insights, Inc.\n",
+      "language  -  en-US\n"
+     ]
+    }
+   ],
    "source": [
     "DM.creator = 'Unknown'\n",
     "DM.contrib = 'Someone'\n",
@@ -267,11 +306,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote ./dmlib/dm-cjnncpj4e000l488pcicv3hv7.xsd\n"
+     ]
+    }
+   ],
    "source": [
     "print(DM.exportDM())"
    ]
