Fix XdOrdiinal validation

--- a/RM/3_1_0/notebooks/XdOrdinal Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdOrdinal Examples.ipynb
@@ -85,7 +85,7 @@
     "c.append((0,'lo','https://datainsights.tech/examples/lo'))\n",
     "c.append((1,'mid','https://datainsights.tech/examples/mid'))\n",
     "c.append((2,'hi','https://datainsights.tech/examples/hi'))\n",
-    "\n",
+    "    \n",
     "d = XdOrdinalType(\"Severity Level\", c)\n",
     "d.docs = \"Select a severity level.\"\n",
     "d.definition_url = 'http://s3model.com/examples/'\n",
@@ -112,7 +112,7 @@
    "outputs": [],
    "source": [
     "d.normal_status = 'mid'\n",
-    "print(d.getXMLInstance())"
+    "print(d.getXMLInstance(True))"
    ]
   }
  ],
