Refactor XdOrdiinal and XdCount example generators.

--- a/RM/3_1_0/notebooks/XdCount Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdCount Examples.ipynb
@@ -131,8 +131,9 @@
    },
    "outputs": [],
    "source": [
-    "# add instnace data\n",
+    "# add instance data\n",
     "d.value = 25\n",
+    "u.value = 'dozens'\n",
     "print(d.getXMLInstance())"
    ]
   },
@@ -220,6 +221,7 @@
    "outputs": [],
    "source": [
     "d.value = 90\n",
+    "u.value = 'things'\n",
     "print(d.getXMLInstance())"
    ]
   }
