--- a/RM/3_1_0/notebooks/XdOrdinal Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdOrdinal Examples.ipynb
@@ -81,10 +81,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = []\n",
-    "c.append((0,'lo','https://datainsights.tech/examples/lo'))\n",
-    "c.append((1,'mid','https://datainsights.tech/examples/mid'))\n",
-    "c.append((2,'hi','https://datainsights.tech/examples/hi'))\n",
+    "c = {}\n",
+    "c[0] = ('lo','https://datainsights.tech/examples/lo')\n",
+    "c[1] = ('mid','https://datainsights.tech/examples/mid')\n",
+    "c[2] = ('hi','https://datainsights.tech/examples/hi')\n",
     "    \n",
     "d = XdOrdinalType(\"Severity Level\", c)\n",
     "d.docs = \"Select a severity level.\"\n",
@@ -112,7 +112,8 @@
    "outputs": [],
    "source": [
     "d.normal_status = 'mid'\n",
-    "print(d.getXMLInstance(True))"
+    "d.ordinal = 1\n",
+    "print(d.getXMLInstance())"
    ]
   }
  ],
