Add ReferenceRange Examples

--- a/RM/3_1_0/notebooks/XdFloat Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdFloat Examples.ipynb
@@ -59,7 +59,7 @@
    },
    "outputs": [],
    "source": [
-    "help(XdFloatType)"
+    "# help(XdFloatType)"
    ]
   },
   {
@@ -106,7 +106,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
