--- a/RM/3_1_0/notebooks/XdQuantity Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdQuantity Examples.ipynb
@@ -102,6 +102,7 @@
     "d.units = u\n",
     "d.min_inclusive = 0  # can't have a negative amount\n",
     "d.fraction_digits = 2 # currency is recorded with only two decimal places\n",
+    "d.total_digits = 10\n",
     "print(d)"
    ]
   },
@@ -140,7 +141,7 @@
    "outputs": [],
    "source": [
     "d.value = 128.00\n",
-    "print(d.getXMLInstance())"
+    "print(d.getXMLInstance(True))"
    ]
   }
  ],
