--- a/RM/3_1_0/notebooks/XdRatio Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdRatio Examples.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -107,9 +107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XdRatioType : Wins vs. Losses, ID: cjnp7yhg80000va8p6eelyyra\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the ratio model\n",
     "ratio = XdRatioType(\"Wins vs. Losses\")\n",
