--- a/RM/3_1_0/notebooks/00. Getting Started.ipynb
+++ b/RM/3_1_0/notebooks/00. Getting Started.ipynb
@@ -141,6 +141,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "10. [Reference Ranges and XdIntervals](RefRange%20Examples.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Structures**\n",
     "\n",
     "There are actually two structural *Items*. The XdAdapterType and the ClusterType. The XdAdapter is used to wrap any XdType so it can be included in a Cluster. When an XdType is used as another attribute, such as a XdStringType being used as a XdCount.units, then it doesn't need the XdAdapterType wrapper. \n",
