--- a/RM/3_1_0/notebooks/RefRange Examples.ipynb
+++ b/RM/3_1_0/notebooks/RefRange Examples.ipynb
@@ -33,6 +33,8 @@
    "outputs": [],
    "source": [
     "import sys \n",
+    "from decimal import Decimal\n",
+    "\n",
     "sys.path.append(\"../pylib/\")\n",
     "from s3m_xdt import XdQuantityType, XdStringType, XdIntervalType, ReferenceRangeType"
    ]
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false,
     "slideshow": {
@@ -101,14 +103,27 @@
     "\n",
     "We need a units object to select either; mmol/L or mg/dL. \n",
     "\n",
-    "We need two reference ranges, one for each units choice available. Ideally there will be reference ranges defined for each age group as well as by sex. That is overkill for our basic tutorial purposes.\n"
+    "We need six reference ranges, one for each units choice available and one for each range; desireable, borderline and high. Ideally there will be reference ranges defined for each age group as well as by sex. That is overkill for our basic tutorial purposes.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "The lower and upper types must match",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-c7b569940d2c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mXdIntervalType\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"TCDR (mmol/L)\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDecimal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minterval_units\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'mmol/L'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'https://en.wikipedia.org/wiki/Molar_concentration#Units/mmol/L'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m \u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupper\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m5.2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupper_included\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/DII/S3Model/RM/3_1_0/pylib/s3m_xdt.py\u001b[0m in \u001b[0;36mlower\u001b[0;34m(self, v)\u001b[0m\n\u001b[1;32m    564\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_lower\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    565\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 566\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"The lower and upper types must match\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    567\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    568\u001b[0m                 \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"The data type of \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\" must be a valid interval type not \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: The lower and upper types must match"
+     ]
+    }
+   ],
    "source": [
     "# create the units model\n",
     "u = XdStringType('Concentration Units')\n",
@@ -136,7 +151,8 @@
     "# define two reference ranges for the Desireable range\n",
     "mmol = ReferenceRangeType(\"Total Cholesterol Desireable Range (mmol/L)\")\n",
     "mmol.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/about/pac-20384601#desireable/mmol'\n",
-    "i = XdIntervalType(\"TCDR (mmol/L)\", 'decimal')\n",
+    "mmol.is_normal = True # this is considered the normal/desired range\n",
+    "i = XdIntervalType(\"TCDR (mmol/L)\", Decimal)\n",
     "i.interval_units = ('mmol/L','https://en.wikipedia.org/wiki/Molar_concentration#Units/mmol/L')\n",
     "i.lower = 0\n",
     "i.upper = 5.2\n",
@@ -149,7 +165,8 @@
     "\n",
     "mg = ReferenceRangeType(\"Total Cholesterol Desireable Range (mg/dL)\")\n",
     "mg.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/about/pac-20384601#desireable/mg'\n",
-    "i = XdIntervalType(\"TCDR (mg/dL)\", 'decimal')\n",
+    "mg.is_normal = True # this is considered the normal/desired range\n",
+    "i = XdIntervalType(\"TCDR (mg/dL)\", Decimal)\n",
     "i.interval_units = ('mg/dL','https://en.wikipedia.org/wiki/Molar_concentration#Units/mg/dL')\n",
     "i.lower = 0\n",
     "i.upper = 200\n",
@@ -163,7 +180,7 @@
     "# define two reference ranges for the Borderline high range\n",
     "mmol = ReferenceRangeType(\"Total Cholesterol Borderline high Range (mmol/L)\")\n",
     "mmol.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/about/pac-20384601#Borderlinehigh/mmol'\n",
-    "i = XdIntervalType(\"TCBR (mmol/L)\", 'decimal')\n",
+    "i = XdIntervalType(\"TCBR (mmol/L)\", Decimal)\n",
     "i.interval_units = ('mmol/L','https://en.wikipedia.org/wiki/Molar_concentration#Units/mmol/L')\n",
     "i.lower = 5.2\n",
     "i.upper = 6.2\n",
@@ -176,7 +193,7 @@
     "\n",
     "mg = ReferenceRangeType(\"Total Cholesterol Borderline high Range (mg/dL)\")\n",
     "mg.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/about/pac-20384601#Borderlinehigh/mg'\n",
-    "i = XdIntervalType(\"TCBR (mg/dL)\", 'decimal')\n",
+    "i = XdIntervalType(\"TCBR (mg/dL)\", Decimal)\n",
     "i.interval_units = ('mg/dL','https://en.wikipedia.org/wiki/Molar_concentration#Units/mg/dL')\n",
     "i.lower = 200\n",
     "i.upper = 239\n",
@@ -190,7 +207,7 @@
     "# define two reference ranges for the High range\n",
     "mmol = ReferenceRangeType(\"Total Cholesterol High Range (mmol/L)\")\n",
     "mmol.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/about/pac-20384601#high/mmol'\n",
-    "i = XdIntervalType(\"TCHR (mmol/L)\", 'decimal')\n",
+    "i = XdIntervalType(\"TCHR (mmol/L)\", Decimal)\n",
     "i.interval_units = ('mmol/L','https://en.wikipedia.org/wiki/Molar_concentration#Units/mmol/L')\n",
     "i.lower = 6.2\n",
     "i.lower_included = False\n",
@@ -202,7 +219,7 @@
     "\n",
     "mg = ReferenceRangeType(\"Total Cholesterol High Range (mg/dL)\")\n",
     "mg.definition_url = 'https://www.mayoclinic.org/tests-procedures/cholesterol-test/about/pac-20384601#high/mg'\n",
-    "i = XdIntervalType(\"TCHR (mg/dL)\", 'decimal')\n",
+    "i = XdIntervalType(\"TCHR (mg/dL)\", Decimal)\n",
     "i.interval_units = ('mg/dL','https://en.wikipedia.org/wiki/Molar_concentration#Units/mg/dL')\n",
     "i.lower = 240\n",
     "i.lower_included = False\n",
